<package>
  <name>dbow3_catkin</name>
  <version>0.0.1</version>
  <description>dbow3_catkin</description>
  <maintainer email="xiangyu002@e.ntu.edu.sg">Mike Xiangyu Liu</maintainer>

  <license>See package</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
</package>

